--- a/core/templates/reports/languages.html
+++ b/core/templates/reports/languages.html
@@ -23,10 +23,18 @@ Below is a list of languages found in newspaper text that are available in Chron
             {{ l.language__code }}
         </td>
         <td>
+            {% ifequal l.language__code 'eng' %}
+                batches
+            {% else %} 
             <a href="{% url chronam_language_batches l.language__code %}">batches</a>
+            {% endifequal %} 
         </td>
         <td>
+            {% ifequal l.language__code 'eng' %}
+                titles 
+            {% else %} 
             <a href="{% url chronam_language_titles l.language__code %}">titles</a>
+            {% endifequal %} 
         </td>
         <td>
             {{ l.count }}
