updated URL structure for hit hilighting and search; refs #1181.

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -139,7 +139,7 @@
 
     <!-- jQuery library -->
     <script type="text/javascript" 
-		src="{% memorious 'media/js/jquery.min.js&jquery-ui.min.js' %}"></script>
+		src="{% memorious 'media/js/jquery.min.js&jquery-ui.min.js&jquery.ba-bbq.min.js' %}"></script>
  
     <script type="text/javascript">
        var collapse_search_tab = "{{ collapse_search_tab }}";
