--- a/core/templates/search_pages_results.html
+++ b/core/templates/search_pages_results.html
@@ -140,7 +140,7 @@ if ($.browser.msie && $.browser.version < 7) {
             <td>
             {% if object %}
                 <div class="highlite">
-                    <a href="{{ object.url }};words={{object.words}}?{{q}}&index={{forloop.counter0}}">
+                    <a href="{{ object.url }}#words={{object.words}}&{{q}}&index={{forloop.counter0}}">
                     {% if object.jp2_filename %} 
                     <img class="thumbnail" src="{{ object.thumb_url }}" />
                     {% else %}
@@ -148,7 +148,7 @@ if ($.browser.msie && $.browser.version < 7) {
                     {% endif %}
                     </a><br />
 		    {% with object.issue.title as title %}
-                    <a href="{{ object.url }};words={{object.words}}?{{q}}&index={{forloop.counter0}}">{{title.name}} ({{title.place_of_publication}}), {{object.issue|label}}, {{object|label}}</a>
+                    <a href="{{ object.url }}#words={{object.words}}&{{q}}&index={{forloop.counter0}}">{{title.name}} ({{title.place_of_publication}}), {{object.issue|label}}, {{object|label}}</a>
 		    {% endwith %}
 
                     {% comment %}The following two hidden input fields are used by the add_highlights javascript{% endcomment %}
