initial commit for django_lc integration

--- a/core/templates/404.html
+++ b/core/templates/404.html
@@ -7,7 +7,7 @@
 {% block box-tabs %}
 {% endblock %}
 
-{% block content %}
+{% block subcontent %}
 <div id="box_right">
     <div style="margin: 10px;">
         Requested resource could not be found.
