--- a/core/templates/about_api.html
+++ b/core/templates/about_api.html
@@ -1,11 +1,11 @@
 {% extends "site_base_alt.html" %}
 
-{% load memorious %}
+{% load static from staticfiles %}
 
 {% block box-tabs %}
 {% endblock %}
 
-{% block content %}
+{% block main_content %}
 <div id="std_box">
 <h2>Introduction</h2> 
 <p>Chronicling America provides access to information about historic
@@ -439,4 +439,4 @@ legacy browser support.
 
 <p class="backtotop"><a href="#skip_menu">Top</a></p>
  
-{% endblock %}
+{% endblock main_content %}
