--- a/core/templates/help.html
+++ b/core/templates/help.html
@@ -1,11 +1,11 @@
 {% extends "site_base_alt.html" %}
 
-{% load memorious %}
+{% load static from staticfiles %}
 
 {% block box-tabs %}
 {% endblock %}
 
-{% block content %}
+{% block subcontent %}
 
 <div id="std_box">
     <ul>
