--- a/core/templates/reports/awardee.html
+++ b/core/templates/reports/awardee.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 
-{% block content %}
+{% block subcontent %}
 
 <p>Below is some summary information about contributions to Chronicling America
 from the NDNP Awardee, {{ awardee }}. Summary information about <a href="{% url chronam_awardees %}">all awardees</a> is also available.</p>
