--- a/core/templates/reports/batch.html
+++ b/core/templates/reports/batch.html
@@ -7,7 +7,7 @@
     <link rel="alternate" href="{% url chronam_batch_dot_json batch.name %}" />
 {% endblock %}
 
-{% block content %}
+{% block subcontent %}
 
 <br />
 
