--- a/core/templates/reports/essays.html
+++ b/core/templates/reports/essays.html
@@ -1,6 +1,6 @@
 {% extends "reports/reports.html" %}
 
-{% block content %}
+{% block subcontent %}
 
 <p>
 Below is a list of essays provided by NDNP Awardees about newspapers that
