--- a/core/templates/reports/languages.html
+++ b/core/templates/reports/languages.html
@@ -1,6 +1,6 @@
 {% extends "reports/reports.html" %}
 
-{% block content %}
+{% block subcontent %}
 
 <p>
 Below is a list of languages found in newspaper text that are available in Chronicling America.
