--- a/core/templates/reports/ocr.html
+++ b/core/templates/reports/ocr.html
@@ -1,6 +1,6 @@
 {% extends "reports/reports.html" %}
 
-{% load memorious %}
+{% load static from staticfiles %}
 {% load custom_filters %}
 
 {% block extrahead %}
@@ -12,7 +12,7 @@
 {% block box-tabs %}
 {% endblock %}
 
-{% block content %}
+{% block subcontent %}
 <h3>What is OCR?</h3>
 
 <p>
