--- a/core/templates/reports/pages_on_flickr.html
+++ b/core/templates/reports/pages_on_flickr.html
@@ -1,6 +1,6 @@
 {% extends "reports/reports.html" %}
 
-{% block content %}
+{% block subcontent %}
 
 <p>
 Periodically pages are selected by curators for upload to Flickr. This report
