--- a/core/templates/reports/states.html
+++ b/core/templates/reports/states.html
@@ -1,7 +1,7 @@
 {% extends "reports/reports.html" %}
 {% load custom_filters %}
 
-{% block content %}
+{% block subcontent %}
 
 <div id="content">
 
