--- a/core/templates/reports/states_counties.html
+++ b/core/templates/reports/states_counties.html
@@ -4,7 +4,7 @@
     <link rel="alternate" type="application/json" href="counties.json" />
 {% endblock %}
 
-{% block content %}
+{% block subcontent %}
 
 <div id="search_results_box">
   <div id="search_results_content">
