--- a/core/templates/reports/status.html
+++ b/core/templates/reports/status.html
@@ -1,7 +1,7 @@
 {% extends "reports/reports.html" %}
 {% load humanize %}
 
-{% block content %}
+{% block subcontent %}
 <h2>System Status</h2>
 
 <table class="data" width="100%">
