--- a/core/templates/search_pages_results_list.html
+++ b/core/templates/search_pages_results_list.html
@@ -1,6 +1,6 @@
 {% extends "search_pages_results.html" %}
 
-{% load memorious %}
+{% load static from staticfiles %}
 {% load custom_filters %}
 
 {% block search_results_box %}
