--- a/core/templates/site_base_alt.html
+++ b/core/templates/site_base_alt.html
@@ -22,9 +22,11 @@
     </ul>
   </div>
   </div><!-- end id:left_nav -->
-{% endblock %}
+{% endblock left_bits %}
+
 {% block page_head_container %}
 {% endblock %}
+
 {% block sub_page_head %}
 <div id="page_head" class="_col">
 <h1 class="oneline">
@@ -33,9 +35,8 @@
 </div><!-- end id:page_head -->
 {% endblock %}
 
-{% block main_content %}
-  {% block content %}{% endblock %}
-{% endblock %}
+{% block subcontent %}
+{% endblock subcontent %}
 
 {% block non_main_content %}
 {% endblock %}
