--- a/core/templates/500.html
+++ b/core/templates/500.html
@@ -7,7 +7,7 @@
 {% block box-tabs %}
 {% endblock %}
 
-{% block content %}
+{% block subcontent %}
 <div id="box_right">
     <div style="margin: 10px;">
     Chronicling America has encountered an unexpected error while
