--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -1,11 +1,11 @@
 {% extends 'site_base_alt.html' %}
 
-{% load memorious %}
+{% load static from staticfiles %}
 
 {% block box-tabs %}
 {% endblock %}
 
-{% block content %}
+{% block main_content %}
  <div id="std_box">
   <!--div class="about_pic_box"><a href="#"><img src="images/logo_neh.gif" width="210" height="101" alt="neh" /></a><br /><a href="#"><img class="loc" src="images/logo_loc.gif" width="215" height="47" alt="Library of Congress" /></a></div-->
   <p>Chronicling America is a Website providing access to information about historic newspapers and select digitized newspaper pages, and is produced by the National Digital Newspaper Program (NDNP). NDNP, a partnership between the National Endowment for the Humanities (NEH) and the Library of Congress (LC), is a long-term effort to develop an Internet-based, searchable database of U.S. newspapers with descriptive information and select digitization of historic pages. Supported by NEH, this rich digital resource will be developed and permanently maintained at the Library of Congress. An NEH award program will fund the contribution of content from, eventually, all U.S. states and territories.</p> 
@@ -50,4 +50,4 @@
   <p class="backtotop"><a href="#skip_menu">Top</a></p>
 </div><!-- end id:std_box -->
 
-{% endblock %}
+{% endblock main_content %}
