--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,11 +1,11 @@
 {% extends "site_base_alt.html" %}
  
-{% load memorious %}
+{% load static from staticfiles %}
 {% load humanize %}
  
 {% block javascript %}
 <!-- jCarousel --> 
-<script type="text/javascript" src="{% memorious 'media/js/jquery.jcarousel.js' %}"></script> 
+<script type="text/javascript" src="{% static 'js/jquery.jcarousel.js' %}"></script> 
 <script type="text/javascript"> 
 jQuery(function($){
     $('#mycarousel').jcarousel();
@@ -15,7 +15,7 @@ jQuery(function($){
  
 {% block sub_page_head %}{% endblock %}
 
-{% block content %}
+{% block subcontent %}
   <div class="carousel-body"> 
     <div class="carousel-menu"> 
         <a href='{% url chronam_search_pages_results %}?dateFilterType=range&date1={{date|date:"m/d/Y" }}&date2={{date|date:"m/d/Y"}}/'><strong>100 Years Ago Today</strong>: {{ date|date:"F j, Y" }} ({{page_count|intcomma}} issues)</a>
@@ -27,5 +27,4 @@ jQuery(function($){
     </ul> 
   </div><!-- end carousel-body --> 
   <div class="clear"><!-- --></div> 
-{% endblock %}  
- 
+{% endblock subcontent %}  
