--- a/core/templates/includes/issue_pages_ctrl.html
+++ b/core/templates/includes/issue_pages_ctrl.html
@@ -1,4 +1,4 @@
-{% load memorious %}
+{% load static from staticfiles %}
 
 <div class="search_results_ctrl">
     <span class="nav"><a href="{% url chronam_issues issue.title.lccn %}" class="ar-back">Back to Browse All Available Issues</a> 
@@ -25,7 +25,7 @@
     |
     {% if page.has_previous %}
     <a href="{% url chronam_issue_pages_page_number title.lccn,issue.date_issued,issue.edition,page.previous_page_number %}" class="prev">
-        <img src="{% memorious 'media/images/pag_prev_on.gif' %}" alt="prev" width="13" height="13" />
+        <img src="{% static 'images/pag_prev_on.gif' %}" alt="prev" width="13" height="13" />
     </a>
     {% endif %}
     {% for page_number in page_range_short %}
@@ -43,7 +43,7 @@
 
     {% if page.has_next %}
     <a href="{% url chronam_issue_pages_page_number title.lccn,issue.date_issued,issue.edition,page.next_page_number %}" class="next">
-    <img src="{% memorious 'media/images/pag_next_on.gif' %}" alt="next" width="13" height="13" />
+    <img src="{% static 'images/pag_next_on.gif' %}" alt="next" width="13" height="13" />
     </a>
     {% endif %}
 </span>
