--- a/core/templates/includes/titles_browse_ctrl.html
+++ b/core/templates/includes/titles_browse_ctrl.html
@@ -1,4 +1,4 @@
-{% load memorious %}
+{% load static from staticfiles %}
       <span class="results">Results {{ page_start }} - {{ page_end }} of {{ paginator.count }}</span>
 
       <span class="pagination">
@@ -8,7 +8,7 @@
           {% else %}
           <a class="prev" rel="prev" href="{% url chronam_titles_page page.previous_page_number %}">
           {% endif %}
-          <img src="{% memorious 'media/images/pag_prev_on.gif' %}" alt="prev" width="13" height="13" /></a>
+          <img src="{% static 'images/pag_prev_on.gif' %}" alt="prev" width="13" height="13" /></a>
         {% endif %}
       
         {% for page_number in page_range_short %}
@@ -34,7 +34,7 @@
           {% else %}
           <a class="next" rel="next" href="{% url chronam_titles_page page.next_page_number %}">
           {% endif %}
-          <img src="{% memorious 'media/images/pag_next_on.gif' %}" alt="next" width="13" height="13" /></a>
+          <img src="{% static 'images/pag_next_on.gif' %}" alt="next" width="13" height="13" /></a>
       {% endif %}
       </span>
       <form name="jumptopage" action="" method="GET" class="jumptopage">
