--- a/core/templates/page_print.html
+++ b/core/templates/page_print.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-{% load memorious %}
+{% load static from staticfiles %}
     <title>Chronicling America - The Library of Congress</title>
     <style type="text/css">
-        @import url({% memorious 'media/css/ca_print.css' %});
+        @import url({% static 'css/ca_print.css' %});
     </style>
 {% url chronam_page title.lccn,page.issue.date_issued,page.issue.edition,page.sequence as url %}
     <link rel="canonical" href="http://{{host}}{{url}}" />
