--- a/core/templates/reports/awardees.html
+++ b/core/templates/reports/awardees.html
@@ -1,7 +1,7 @@
 {% extends "reports/reports.html" %}
 {% load humanize %}
 
-{% block content %}
+{% block subcontent %}
 
 <p>
 Below is a list of NDNP Awardees that have content in the Chronicling 
