--- a/core/templates/reports/cities.html
+++ b/core/templates/reports/cities.html
@@ -9,7 +9,7 @@
 {% endif %}
 {% endblock %}
 
-{% block content %}
+{% block subcontent %}
 
 <div id="search_results_box">
   <div id="search_results_content">
