--- a/core/templates/reports/counties.html
+++ b/core/templates/reports/counties.html
@@ -5,7 +5,7 @@
 <link rel="alternate" type="application/json" href="{% url chronam_counties_in_state_json state|pack_url 'json' %}" />
 {% endblock %}
 
-{% block content %}
+{% block subcontent %}
 
 <div id="search_results_box">
   <div id="search_results_content">
