--- a/core/templates/reports/institution_titles.html
+++ b/core/templates/reports/institution_titles.html
@@ -1,5 +1,5 @@
 {% extends "reports/reports.html" %}
-{% load memorious %}
+{% load static from staticfiles %}
 
 {% block extra_link_types %}
       {% if page.has_previous %}
@@ -10,13 +10,13 @@
       {% endif %}
 {% endblock %}
 
-{% block content %}
+{% block subcontent %}
 
   {% ifnotequal paginator.num_pages 1 %}
   <div id="searchnav">
     <div class="pageNavigator">
       {% if page.has_previous %}
-      <a rel="prev" href="{% url chronam_institution_titles_page_number code, page.previous_page_number %}"><img src="{% memorious 'media/images/pag_prev_on.gif' %}" alt="prev" width="13" height="13" /></a> 
+      <a rel="prev" href="{% url chronam_institution_titles_page_number code, page.previous_page_number %}"><img src="{% static 'images/pag_prev_on.gif' %}" alt="prev" width="13" height="13" /></a> 
       {% endif %}
       {% for page_number in page_range_short %}
       {% ifequal page_number "..." %}
@@ -32,7 +32,7 @@
       {% endifequal %}
       {% endfor %}
       {% if page.has_next %}
-          <a rel="next" href="{% url chronam_institution_titles_page_number code, page.next_page_number %}"><img src="{% memorious 'media/images/pag_next_on.gif' %}" alt="prev" width="13" height="13" /></a>
+          <a rel="next" href="{% url chronam_institution_titles_page_number code, page.next_page_number %}"><img src="{% static 'images/pag_next_on.gif' %}" alt="prev" width="13" height="13" /></a>
       {% endif %}
     </div>
   </div>
