--- a/core/templates/reports/language_batches.html
+++ b/core/templates/reports/language_batches.html
@@ -1,14 +1,14 @@
 {% extends "reports/reports.html" %}
-{% load memorious %}
+{% load static from staticfiles %}
 
-{% block content %}
+{% block subcontent %}
 
   {% ifnotequal paginator.num_pages 1 %}
   <div id="searchnav">
       <div class="pageNavigator">
       Pages: 
       {% if page.has_previous %}
-      <a rel="prev" href="{% url chronam_language_batches_page_number language page.previous_page_number %}"><img src="{% memorious 'media/images/pag_prev_on.gif' %}" alt="prev" width="13" height="13" /></a>
+      <a rel="prev" href="{% url chronam_language_batches_page_number language page.previous_page_number %}"><img src="{% static 'images/pag_prev_on.gif' %}" alt="prev" width="13" height="13" /></a>
       {% endif %}
       {% for page_number in page_range_short %}
       {% ifequal page_number "..." %}
@@ -24,7 +24,7 @@
       {% endifequal %}
       {% endfor %}
       {% if page.has_next %}
-      <a rel="next" href="{% url chronam_language_batches_page_number language page.next_page_number %}"><img src="{% memorious 'media/images/pag_next_on.gif' %}" alt="next" width="13" height="13" /></a> 
+      <a rel="next" href="{% url chronam_language_batches_page_number language page.next_page_number %}"><img src="{% static 'images/pag_next_on.gif' %}" alt="next" width="13" height="13" /></a> 
       {% endif %}
     </div>
   </div>
