refs #1281 added cite/reference use to api page

--- a/core/templates/about_api.html
+++ b/core/templates/about_api.html
@@ -23,7 +23,7 @@ availability of these views.  If you are a software developer
 or researcher or anyone else who might be interested in programmatic
 access to the data in Chronicling America, we encourage you to look
 around the site, &quot;view source&quot; often, and follow where the
-different links take you to get started.</p> 
+different links take you to get started.  When describing Chronicling America as the source of content, please use the URL and a Web site citation, such as &quot;from the Library of Congress, Chronicling America: Historic American Newspapers site&quot;.</p> 
 
 <p>For more information about the open source Chronicling America software 
 please see the <a href="http://loc-ndnp.sf.net">loc-ndnp</a> SourceForge site.
